# prototest

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp  run.ps1
csharp/: ScgProtoTest.csproj  run.ps1  scg_test_output.json
csharp/ScgProtoTest/: Program.cs  ScgProtoTest.csproj
